<resources>
    <string name="app_name">StockMonitorRemake</string>
    <string name="plus_sign">+</string>
    <string name="my_portfolio">My Portfolio</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="details">Details</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="amount">Amount:</string>
    <string name="sector">Sector:</string>
    <string name="button">Button</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="technology">Technology</string>
    <string name="healthcare">Healthcare</string>
    <string name="basic_materials">Basic Materials</string>
    <string name="stockData_Service">stockData Service</string>
    <string name="enter_a_stock_symbol_and_press_to_add_stock">Enter a stock symbol \n and press + to add stock:</string>
    <string name="timestamp">Timestamp:</string>
    <string name="enter_amount">Enter amount</string>
    <string name="enter_the_buying_price">Enter the buying price</string>
    <string name="save">save</string>
    <string name="company_name">Company name:</string>
    <string name="current_price">Current price:</string>
    <string name="diffprice">DiffPrice</string>
    <string name="buying_price">Buying price:</string>
    <string name="primaryexchange">PrimaryExchange:</string>
    <string name="update">Update</string>
    <string name="bought_price">Bought price</string>
</resources>
