<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="17dp"
        android:text="@string/back"
        app:layout_constraintBottom_toTopOf="@+id/buttonDelete"
        app:layout_constraintEnd_toStartOf="@+id/buttonDelete" />

    <Button
        android:id="@+id/buttonEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:text="@string/edit"
        app:layout_constraintBottom_toTopOf="@+id/buttonDelete"
        app:layout_constraintStart_toEndOf="@+id/buttonDelete" />

    <TextView
        android:id="@+id/textViewDetailsCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="39dp"
        android:text="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/textViewPrice"
        app:layout_constraintEnd_toEndOf="@+id/textViewPrice" />

    <TextView
        android:id="@+id/textViewNameDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="103dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@+id/textViewPriceDisplay"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="37dp"
        android:text="@string/price"
        app:layout_constraintBottom_toTopOf="@+id/textViewAmount"
        app:layout_constraintStart_toStartOf="@+id/textViewAmount" />

    <TextView
        android:id="@+id/textViewPriceDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        app:layout_constraintStart_toStartOf="@+id/textViewAmountDisplay"
        app:layout_constraintTop_toBottomOf="@+id/textViewNameDisplay" />

    <TextView
        android:id="@+id/textViewAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginBottom="32dp"
        android:text="@string/amount"
        app:layout_constraintBottom_toTopOf="@+id/textViewSector"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewAmountDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        app:layout_constraintEnd_toStartOf="@+id/textViewSectorDisplay"
        app:layout_constraintStart_toStartOf="@+id/textViewSectorDisplay"
        app:layout_constraintTop_toBottomOf="@+id/textViewPriceDisplay" />

    <TextView
        android:id="@+id/textViewSector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="21dp"
        android:text="@string/sector"
        app:layout_constraintBottom_toTopOf="@+id/textViewTimestamp"
        app:layout_constraintStart_toStartOf="@+id/textViewTimestamp" />

    <TextView
        android:id="@+id/textViewSectorDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        app:layout_constraintEnd_toStartOf="@+id/textViewTimestampDisplay"
        app:layout_constraintStart_toStartOf="@+id/textViewTimestampDisplay"
        app:layout_constraintTop_toBottomOf="@+id/textViewAmountDisplay" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewTimestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginBottom="42dp"
        android:text="@string/timestamp"
        app:layout_constraintBottom_toTopOf="@+id/buttonBack"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewTimestampDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/buttonEdit"
        app:layout_constraintStart_toStartOf="@+id/buttonEdit"
        app:layout_constraintTop_toBottomOf="@+id/textViewSectorDisplay" />
</android.support.constraint.ConstraintLayout>