<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/txtCompName"
        android:layout_width="0dp"
        android:layout_height="21dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="7dp"
        android:gravity="center"
        android:text="@string/company_name"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtCurrentPrice"
        app:layout_constraintEnd_toStartOf="@+id/txtCurrentPrice"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtCurrentPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="7dp"
        android:gravity="center"
        android:text="@string/current_price"
        app:layout_constraintEnd_toStartOf="@+id/textViewBought"
        app:layout_constraintStart_toEndOf="@+id/txtCompName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtDiffPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="6dp"
        android:gravity="center"
        android:text="@string/diffprice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewBought"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewBought"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:text="@string/bought_price"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtCurrentPrice"
        app:layout_constraintEnd_toStartOf="@+id/txtDiffPrice"
        app:layout_constraintStart_toEndOf="@+id/txtCurrentPrice" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="45dp" />


</android.support.constraint.ConstraintLayout>